# shards

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  justfile  rushi.desktop  stardust.desktop  test.py
crates/libshards/: Cargo.toml
crates/libshards-core/: Cargo.toml  bindings.h  build.rs
crates/libshards-core/src/: lib.rs
crates/libshards-sys/: Cargo.toml  gen.sh  shards.h
crates/libshards-sys/src/: lib.rs  shards.rs
crates/libshards/src/: lib.rs
crates/shards-sys/: Cargo.toml
crates/shards-sys/src/: lib.rs
crates/shardslsp/: Cargo.toml
crates/shardslsp/src/: client.rs  jsonrpc.rs  util.rs
crates/shardstypes/: Cargo.toml
crates/shardstypes/src/: external.rs  ffi.rs  internal.rs  lib.rs  prelude.rs
etc/: shards.desktop
parsers/rush/: Cargo.toml
parsers/rush/src/: helpers.rs  lexer.rs  lib.rs  parser.rs  runner.rs
parsers/rush/src/lexer/: mod.rs  token.rs
parsers/rush/src/parse/: mod.rs  parser.rs  prompter.rs
parsers/rush/src/shell/: mod.rs
parsers/rush/src/util/: smap.rs
parsers/rushi/: Cargo.toml  README.md
parsers/rushi/src/: lib.rs
parsers/stardust/: README.md  build.zig
parsers/stardust/src/: lib.zig  main.zig
rushi/: Cargo.toml
rushi/src/: lib.rs
shards/: Cargo.toml
shards-lsp/src/: lib.rs  snippet.rs
shards-types/: Cargo.toml
shards-types/src/: external.rs  internal.rs  lib.rs  prelude.rs
shards/src/: ast.rs  cli.rs  config.rs  exec.rs  interpreter.rs  line.rs  main.rs  prelude.rs  runner.rs
shards/src/config/: abbrs.rs  mod.rs
shards/src/parser/: ast.rs  astre.rs  bytecode.rs  bytes.rs  inter.rs  interpreter.rs  mod.rs  opcod.rs  opcode.rs
shards/src/pipes/: fds.rs  mod.rs  streams.rs
src/: ast.rs  cli.rs  cmd.rs  config.rs  interpreter.rs  main.rs  streams.rs
src/env/: mod.rs
src/pipes/: mod.rs  streams.rs
stardust/: Cargo.toml
stardust-lsp/: Cargo.toml
stardust-lsp/src/: client.rs  lib.rs  snippet.rs  transport.rs  util.rs
stardust/src/: ast.rs  config.rs  exec.rs  interpreter.rs  lib.rs  main.rs
stardust/src/config/: line.rs  mod.rs
stardust/src/parser/: ast.rs  bytecode.rs  interpreter.rs  opcode.rs
stardust/src/pipes/: fds.rs  mod.rs
treet/: README.md  build.zig  build.zig.zon  flake.nix
treet/src/: donut.zig  lib.zig  main.zig  shm.zig  test.zig
treet/test/: main.zig
zigi/: Cargo.toml
