[workspace]
members = [
    # "parsers/stardust",
    "parsers/rushi",
    "parsers/rush/rush*",
    "crates/*",
    # "crates/shardslsp",
    "shards",
]
resolver = "2"

[workspace.dependencies]
libshards = { path = "crates/libshards/" }
resu = { package = "error-stack", version = "0.4" }
log = "0.4"
