[workspace]
members = [
    # "parsers/rushi",
    # "parsers/rush/rush*",
    "crates/libshards*",
    # "crates/shardslsp",
    "shards",
]
resolver = "2"

[workspace.dependencies]
libshards = { path = "crates/libshards" }
resu = { package = "error-stack", version = "0.4" }
log = "0.4"
# libc = "0.2"
