[package]
name = "shards"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
crossterm = "0.27"
libloading = "0.8"
simplelog = "0.12"
# tree-sitter = "0.22"
# tree-sitter-rust = "0.21"

# xdg = "2.5"
# regex = "1"

resu.workspace = true
log.workspace = true
libshards.workspace = true
