[package]
name = "stardust"
version = "0.1.0"
edition = "2021"

[dependencies]
reedline = "0.19.1" 
crossterm = "*"
nu-ansi-term = "*"

anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.1"
xdg = "2.5.0"
syn = "2.0.16"
regex = "1.8.3"
libc = "0.2.144"
nix = "0.26.2"
tokio = { version = "1.28.2", features = ["full"] }
atty = "0.2.14"

stardust-lsp = { path = "../stardust-lsp" }
