[package]
name = "stardust"
version = "0.1.0"
edition = "2021"

[dependencies]
reedline = "0.21" 
crossterm = "*"
nu-ansi-term = "*"
rushi = { path = "../rushi" }
syn = "2"
anyhow = "1"
thiserror = "1"

clap = { version = "4.3.0", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.1"
xdg = "2.5.0"
regex = "1.8.4"
libc = "0.2.147"
nix = "0.26.2"
tokio = { version = "1.28", features = ["full"] }
atty = "0.2.14"

stardust-lsp = { path = "../stardust-lsp" }
