[package]
name = "stardust-lsp"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
futures-executor = "0.3"
futures-util = { version = "0.3", features = [
    "std",
    "async-await",
], default-features = false }
log = "0.4"
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1.14"
which = "4.4"
parking_lot = "0.12.1"
